<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mercadolibre</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Buscar</string>
    <string name="avatar">Avatar</string>
    <string name="pager_message"> %1$s -  %2$s resultados</string>
    <string name="pager_message2">Primera pagina de resultados</string>
    <string name="textViewTitulo_contentDescription">Título del producto</string>
    <string name="textViewPrecio_contentDescription">Precio del producto</string>
    <string name="precio_text">Precio: %1$s</string>
    <string name="error_message_meli"> Ocurrió un error.Revisa tu conexión a internet y vuelve a intentarlo.</string>
    <string name="error_message_connection">Revisa tu conexión a internet y vuelve a intentarlo.</string>
    <string name="message_connection_ok"> Conexión a internet restablecida</string>

    <string name="textViewCantidadDisponible_contentDescription">Cantidad de productos disponibles</string>
    <string name="textViewCantidadVendidas_contentDescription">Cantidad de productos vendidos</string>
    <string name="textViewCondition_contentDescription">Estado del producto:</string>

    <string name="textViewCantidadDisponible_text">Disponibles: %1$s</string>
    <string name="textViewCantidadVendidas_text">Vendidos: %1$s</string>
    <string name="textViewCondition_text">Estado: %1$s</string>
    <string name="copyright1">\u00A9 2014 copyright by Leandro Fantin</string>
    <string name="copyright2">All rights reserved.</string>
    <string name="copyright3">Aplicación Android</string>
    <string name="copyright4">Examen Mercadolibre</string>
    <string name="sinvalor">sin especificar</string>



</resources>
