<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leandrofantin.ejerciciomercadolibre.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/copyright4"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textIsSelectable="false"
            android:textColor="@color/DarkGray"
            android:padding="@dimen/abc_action_bar_subtitle_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/copyright3"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textIsSelectable="false"
            android:textColor="@color/DarkGray"
            android:padding="@dimen/abc_action_bar_subtitle_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewLogo"
            android:src="@drawable/logo_puzzle_bw"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/copyright1"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_action_bar_subtitle_text_size"
            android:textIsSelectable="false"
            android:textColor="@color/DarkGray"
            android:padding="@dimen/abc_action_bar_subtitle_text_size"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/copyright2"
            android:layout_gravity="center"
            android:textSize="@dimen/abc_action_bar_subtitle_text_size"
            android:textIsSelectable="false"
            android:textColor="@color/DarkGray"
            android:padding="@dimen/abc_action_bar_subtitle_text_size"
            />
    </LinearLayout>

</FrameLayout>
